--- a/src/output.css
+++ b/src/output.css
@@ -522,12 +522,33 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.destination-pagination  .swiper-pagination-bullet-active {
+  color:#fff;
+  border-bottom-color: #fff;
+}
+
+.crew-pagination  .swiper-pagination-bullet-active {
+  opacity: 1;
+}
+
 .visible {
   visibility: visible;
 }
 
 .fixed {
   position: fixed;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .right-0 {
@@ -538,29 +559,159 @@ video {
   top: 0px;
 }
 
+.top-56 {
+  top: 14rem;
+}
+
+.top-60 {
+  top: 15rem;
+}
+
+.top-72 {
+  top: 18rem;
+}
+
+.-z-50 {
+  z-index: -50;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.m-2 {
+  margin: 0.125rem;
+}
+
 .mx-24 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+}
+
+.mx-26 {
+  margin-left: 1.625rem;
+  margin-right: 1.625rem;
+}
+
+.mx-27 {
+  margin-left: 1.6875rem;
+  margin-right: 1.6875rem;
+}
+
+.mx-8 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.mx-28 {
+  margin-left: 1.75rem;
+  margin-right: 1.75rem;
+}
+
+.mx-25 {
+  margin-left: 1.5625rem;
+  margin-right: 1.5625rem;
+}
+
+.my-27 {
+  margin-top: 1.6875rem;
+  margin-bottom: 1.6875rem;
+}
+
+.mb-26 {
+  margin-bottom: 1.625rem;
+}
+
+.mb-28 {
+  margin-bottom: 1.75rem;
 }
 
 .mb-48 {
   margin-bottom: 3rem;
 }
 
+.mb-58 {
+  margin-bottom: 3.625rem;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.mt-12 {
+  margin-top: 0.75rem;
+}
+
 .mt-16 {
   margin-top: 1rem;
+}
+
+.mt-23 {
+  margin-top: 1.4375rem;
 }
 
 .mt-24 {
   margin-top: 1.5rem;
 }
 
+.mt-28 {
+  margin-top: 1.75rem;
+}
+
+.mt-32 {
+  margin-top: 2rem;
+}
+
 .mt-48 {
   margin-top: 3rem;
 }
 
+.mt-50 {
+  margin-top: 3.125rem;
+}
+
+.mt-6 {
+  margin-top: 0.375rem;
+}
+
 .mt-81 {
   margin-top: 5.0625rem;
+}
+
+.mt-30 {
+  margin-top: 1.875rem;
+}
+
+.mt-27 {
+  margin-top: 1.6875rem;
+}
+
+.-mt-4 {
+  margin-top: -0.25rem;
+}
+
+.-mt-5 {
+  margin-top: -0.3125rem;
+}
+
+.mt-74 {
+  margin-top: 4.625rem;
+}
+
+.mt-8 {
+  margin-top: 0.5rem;
+}
+
+.mb-104 {
+  margin-bottom: 6.5rem;
 }
 
 .flex {
@@ -571,8 +722,20 @@ video {
   display: none;
 }
 
+.h-1 {
+  height: 0.0625rem;
+}
+
+.h-10 {
+  height: 0.625rem;
+}
+
 .h-150 {
   height: 9.375rem;
+}
+
+.h-170 {
+  height: 10.625rem;
 }
 
 .h-19 {
@@ -591,12 +754,24 @@ video {
   height: 100%;
 }
 
+.max-h-223 {
+  max-height: 13.9375rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
 
+.w-10 {
+  width: 0.625rem;
+}
+
 .w-150 {
   width: 9.375rem;
+}
+
+.w-170 {
+  width: 10.625rem;
 }
 
 .w-19 {
@@ -609,6 +784,10 @@ video {
 
 .w-\[15\.875rem\] {
   width: 15.875rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .flex-col {
@@ -632,12 +811,37 @@ video {
        column-gap: 0.75rem;
 }
 
+.gap-x-18 {
+  -moz-column-gap: 1.125rem;
+       column-gap: 1.125rem;
+}
+
+.gap-x-20 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
 .gap-y-20 {
   row-gap: 1.25rem;
 }
 
 .gap-y-60 {
   row-gap: 3.75rem;
+}
+
+.gap-x-15 {
+  -moz-column-gap: 0.9375rem;
+       column-gap: 0.9375rem;
+}
+
+.gap-x-16 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-x-17 {
+  -moz-column-gap: 1.0625rem;
+       column-gap: 1.0625rem;
 }
 
 .self-end {
@@ -648,16 +852,29 @@ video {
   align-self: center;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-3 {
+  border-bottom-width: 0.1875rem;
+}
+
 .border-r-4 {
-  border-right-width: 4px;
+  border-right-width: 0.25rem;
+}
+
+.border-b-dark-blue {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(56 59 75 / var(--tw-border-opacity));
+}
+
+.border-b-transparent {
+  border-bottom-color: transparent;
 }
 
 .border-r-white {
@@ -665,17 +882,48 @@ video {
   border-right-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.bg-dark-blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 59 75 / var(--tw-bg-opacity));
+}
+
+.bg-very-dark-blue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(11 13 23 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-25 {
+  --tw-bg-opacity: 0.25;
 }
 
 .bg-opacity-5 {
   --tw-bg-opacity: 0.05;
 }
 
-.bg-mobile-pattern {
+.bg-mobile-crew-pattern {
+  background-image: url('./assets/crew/background-crew-mobile.jpg');
+}
+
+.bg-mobile-destination-pattern {
+  background-image: url('./assets/destination/background-destination-mobile.jpg');
+}
+
+.bg-mobile-home-pattern {
   background-image: url('./assets/home/background-home-mobile.jpg');
+}
+
+.bg-mobile-technology-pattern {
+  background-image: url('./assets/technology/background-technology-mobile.jpg');
 }
 
 .bg-cover {
@@ -684,6 +932,10 @@ video {
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.pb-8 {
+  padding-bottom: 0.5rem;
 }
 
 .pl-2 {
@@ -722,6 +974,10 @@ video {
   font-family: Bellefair, serif;
 }
 
+.text-14 {
+  font-size: 0.875rem;
+}
+
 .text-15 {
   font-size: 0.9375rem;
 }
@@ -734,8 +990,20 @@ video {
   font-size: 1.25rem;
 }
 
+.text-28 {
+  font-size: 1.75rem;
+}
+
+.text-56 {
+  font-size: 3.5rem;
+}
+
 .text-80 {
   font-size: 5rem;
+}
+
+.text-24 {
+  font-size: 1.5rem;
 }
 
 .font-bold {
@@ -754,6 +1022,10 @@ video {
   line-height: 6.25rem;
 }
 
+.leading-17 {
+  line-height: 1.0625rem;
+}
+
 .leading-19 {
   line-height: 1.1875rem;
 }
@@ -766,8 +1038,28 @@ video {
   line-height: 1.5625rem;
 }
 
+.leading-32 {
+  line-height: 2rem;
+}
+
+.leading-64 {
+  line-height: 4rem;
+}
+
+.leading-18 {
+  line-height: 1.125rem;
+}
+
+.leading-28 {
+  line-height: 1.75rem;
+}
+
 .tracking-\[1\.25px\] {
   letter-spacing: 1.25px;
+}
+
+.tracking-\[2\.35px\] {
+  letter-spacing: 2.35px;
 }
 
 .tracking-\[2\.7px\] {
@@ -789,14 +1081,25 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.opacity-20 {
+  opacity: 0.2;
+}
+
+.opacity-25 {
+  opacity: 0.25;
+}
+
+.opacity-50 {
+  opacity: 0.5;
+}
+
+.mix-blend-screen {
+  mix-blend-mode: screen;
+}
+
 .blur {
   --tw-blur: blur(8px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.backdrop-filter {
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .transition {
@@ -805,4 +1108,14 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
 }
