Create Technology page (mobile)

--- a/src/input.css
+++ b/src/input.css
@@ -12,4 +12,9 @@
     .crew-pagination  .swiper-pagination-bullet-active {
         opacity: 1;
     }
+
+    .technology-pagination  .swiper-pagination-bullet-active {
+        background-color: #fff;
+        color: #0B0D17;
+    }
 }
