--- a/src/output.css
+++ b/src/output.css
@@ -695,6 +695,10 @@ video {
   margin-top: 0.5625rem;
 }
 
+.mt-auto {
+  margin-top: auto;
+}
+
 .flex {
   display: flex;
 }
@@ -739,10 +743,6 @@ video {
   max-height: 13.9375rem;
 }
 
-.min-h-170 {
-  min-height: 10.625rem;
-}
-
 .min-h-screen {
   min-height: 100vh;
 }
@@ -773,6 +773,14 @@ video {
 
 .max-w-170 {
   max-width: 10.625rem;
+}
+
+.max-w-screen-3xl {
+  max-width: 1920px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-col {
@@ -835,6 +843,10 @@ video {
 
 .self-center {
   align-self: center;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-full {
@@ -904,10 +916,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[var\(--landscape-img\)\] {
-  background-color: var(--landscape-img);
-}
-
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -916,8 +924,8 @@ video {
   --tw-bg-opacity: 0.05;
 }
 
-.bg-\[url\(\'\$\{pictureLandscape\}\'\)\] {
-  background-image: url('${pictureLandscape}');
+.bg-\[image\:var\(--landscape-img\)\] {
+  background-image: var(--landscape-img);
 }
 
 .bg-mobile-crew-pattern {
@@ -934,42 +942,6 @@ video {
 
 .bg-mobile-technology-pattern {
   background-image: url('./assets/technology/background-technology-mobile.jpg');
-}
-
-.bg-tablet-crew-pattern {
-  background-image: url('./assets/crew/background-crew-tablet.jpg');
-}
-
-.bg-\[url\(\$\{pictureLandscape\}\)\] {
-  background-image: url(${pictureLandscape});
-}
-
-.bg-\[url\(\'\.\$\{pictureLandscape\}\'\)\] {
-  background-image: url('.${pictureLandscape}');
-}
-
-.bg-\[url\(\'--landscape-img\'\)\] {
-  background-image: url('--landscape-img');
-}
-
-.bg-\[url\(--landscape-img\)\] {
-  background-image: url(--landscape-img);
-}
-
-.bg-\[url\(var\(--landscape-img\)\)\] {
-  background-image: url(var(--landscape-img));
-}
-
-.bg-\[image\:var\(--landscape-img\)\] {
-  background-image: var(--landscape-img);
-}
-
-.bg-\[image\:var\(--landscape-img\)\2c lightgray_0px_0px_\/_100\%_100\%_no-repeat\] {
-  background-image: var(--landscape-img),lightgray 0px 0px / 100% 100% no-repeat;
-}
-
-.bg-\[image\:var\(--landscape-img\)\2c _lightgray_0px_0px_\/_100\%_100\%_no-repeat\] {
-  background-image: var(--landscape-img), lightgray 0px 0px / 100% 100% no-repeat;
 }
 
 .bg-cover {
@@ -1188,42 +1160,34 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
 .duration-700 {
   transition-duration: 700ms;
 }
 
-@media (min-width: 640px) {
-  .sm\:top-72 {
-    top: 18rem;
-  }
+.hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
 
-  .sm\:top-80 {
-    top: 20rem;
-  }
+.hover\:border-opacity-100:hover {
+  --tw-border-opacity: 1;
+}
 
-  .sm\:top-96 {
-    top: 24rem;
-  }
+.hover\:border-opacity-50:hover {
+  --tw-border-opacity: 0.5;
+}
 
-  .sm\:mt-60 {
-    margin-top: 3.75rem;
-  }
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
 
-  .sm\:mt-20 {
-    margin-top: 1.25rem;
-  }
-
-  .sm\:h-25 {
-    height: 1.5625rem;
-  }
-
-  .sm\:h-240 {
-    height: 15rem;
-  }
-
-  .sm\:h-310 {
-    height: 19.375rem;
-  }
+.hover\:bg-opacity-50:hover {
+  --tw-bg-opacity: 0.5;
 }
 
 @media (min-width: 768px) {
@@ -1285,12 +1249,20 @@ video {
     margin-top: 9.75rem;
   }
 
+  .md\:mt-162 {
+    margin-top: 10.125rem;
+  }
+
   .md\:mt-22 {
     margin-top: 1.375rem;
   }
 
   .md\:mt-24 {
     margin-top: 1.5rem;
+  }
+
+  .md\:mt-26 {
+    margin-top: 1.625rem;
   }
 
   .md\:mt-28 {
@@ -1303,6 +1275,10 @@ video {
 
   .md\:mt-40 {
     margin-top: 2.5rem;
+  }
+
+  .md\:mt-44 {
+    margin-top: 2.75rem;
   }
 
   .md\:mt-49 {
@@ -1319,42 +1295,6 @@ video {
 
   .md\:mt-90 {
     margin-top: 5.625rem;
-  }
-
-  .md\:mt-45 {
-    margin-top: 2.8125rem;
-  }
-
-  .md\:mt-44 {
-    margin-top: 2.75rem;
-  }
-
-  .md\:mt-1 {
-    margin-top: 0.0625rem;
-  }
-
-  .md\:mt-160 {
-    margin-top: 10rem;
-  }
-
-  .md\:mt-165 {
-    margin-top: 10.3125rem;
-  }
-
-  .md\:mt-162 {
-    margin-top: 10.125rem;
-  }
-
-  .md\:mt-16 {
-    margin-top: 1rem;
-  }
-
-  .md\:mt-26 {
-    margin-top: 1.625rem;
-  }
-
-  .md\:mt-18 {
-    margin-top: 1.125rem;
   }
 
   .md\:block {
@@ -1389,10 +1329,6 @@ video {
     max-height: 33.25rem;
   }
 
-  .md\:min-h-310 {
-    min-height: 19.375rem;
-  }
-
   .md\:w-242 {
     width: 15.125rem;
   }
@@ -1411,6 +1347,10 @@ video {
 
   .md\:max-w-440 {
     max-width: 27.5rem;
+  }
+
+  .md\:max-w-445 {
+    max-width: 27.8125rem;
   }
 
   .md\:max-w-456 {
@@ -1441,34 +1381,6 @@ video {
     max-width: 100%;
   }
 
-  .md\:max-w-460 {
-    max-width: 28.75rem;
-  }
-
-  .md\:max-w-450 {
-    max-width: 28.125rem;
-  }
-
-  .md\:max-w-458 {
-    max-width: 28.625rem;
-  }
-
-  .md\:max-w-442 {
-    max-width: 27.625rem;
-  }
-
-  .md\:max-w-444 {
-    max-width: 27.75rem;
-  }
-
-  .md\:max-w-448 {
-    max-width: 28rem;
-  }
-
-  .md\:max-w-445 {
-    max-width: 27.8125rem;
-  }
-
   .md\:flex-col {
     flex-direction: column;
   }
@@ -1494,20 +1406,16 @@ video {
     border-bottom-width: 0rem;
   }
 
+  .md\:bg-tablet-crew-pattern {
+    background-image: url('./assets/crew/background-crew-tablet.jpg');
+  }
+
   .md\:bg-tablet-destination-pattern {
     background-image: url('./assets/destination/background-destination-tablet.jpg');
   }
 
   .md\:bg-tablet-home-pattern {
     background-image: url('./assets/home/background-home-tablet.jpg');
-  }
-
-  .md\:bg-tablet-crew-pattern {
-    background-image: url('./assets/crew/background-crew-tablet.jpg');
-  }
-
-  .md\:bg-mobile-technology-pattern {
-    background-image: url('./assets/technology/background-technology-mobile.jpg');
   }
 
   .md\:bg-tablet-technology-pattern {
@@ -1585,8 +1493,478 @@ video {
   .md\:tracking-\[3\.37px\] {
     letter-spacing: 3.37px;
   }
+}
 
-  .md\:tracking-\[2\.7\] {
-    letter-spacing: 2.7;
+@media (min-width: 1280px) {
+  .xl\:relative {
+    position: relative;
+  }
+
+  .xl\:top-10 {
+    top: 2.5rem;
+  }
+
+  .xl\:top-24 {
+    top: 6rem;
+  }
+
+  .xl\:top-\[34\.75rem\] {
+    top: 34.75rem;
+  }
+
+  .xl\:-order-1 {
+    order: -1;
+  }
+
+  .xl\:mx-0 {
+    margin-left: 0rem;
+    margin-right: 0rem;
+  }
+
+  .xl\:-mr-110 {
+    margin-right: -6.875rem;
+  }
+
+  .xl\:mb-30 {
+    margin-bottom: 1.875rem;
+  }
+
+  .xl\:ml-0 {
+    margin-left: 0rem;
+  }
+
+  .xl\:ml-112 {
+    margin-left: 7rem;
+  }
+
+  .xl\:ml-168 {
+    margin-left: 10.5rem;
+  }
+
+  .xl\:ml-230 {
+    margin-left: 14.375rem;
+  }
+
+  .xl\:ml-255 {
+    margin-left: 15.9375rem;
+  }
+
+  .xl\:ml-326 {
+    margin-left: 20.375rem;
+  }
+
+  .xl\:ml-445 {
+    margin-left: 27.8125rem;
+  }
+
+  .xl\:ml-55 {
+    margin-left: 3.4375rem;
+  }
+
+  .xl\:ml-auto {
+    margin-left: auto;
+  }
+
+  .xl\:mt-0 {
+    margin-top: 0rem;
+  }
+
+  .xl\:mt-105 {
+    margin-top: 6.5625rem;
+  }
+
+  .xl\:mt-113 {
+    margin-top: 7.0625rem;
+  }
+
+  .xl\:mt-14 {
+    margin-top: 0.875rem;
+  }
+
+  .xl\:mt-15 {
+    margin-top: 0.9375rem;
+  }
+
+  .xl\:mt-170 {
+    margin-top: 10.625rem;
+  }
+
+  .xl\:mt-20 {
+    margin-top: 1.25rem;
+  }
+
+  .xl\:mt-24 {
+    margin-top: 1.5rem;
+  }
+
+  .xl\:mt-255 {
+    margin-top: 15.9375rem;
+  }
+
+  .xl\:mt-30 {
+    margin-top: 1.875rem;
+  }
+
+  .xl\:mt-34 {
+    margin-top: 2.125rem;
+  }
+
+  .xl\:mt-40 {
+    margin-top: 2.5rem;
+  }
+
+  .xl\:mt-42 {
+    margin-top: 2.625rem;
+  }
+
+  .xl\:mt-45 {
+    margin-top: 2.8125rem;
+  }
+
+  .xl\:mt-54 {
+    margin-top: 3.375rem;
+  }
+
+  .xl\:mt-55 {
+    margin-top: 3.4375rem;
+  }
+
+  .xl\:mt-82 {
+    margin-top: 5.125rem;
+  }
+
+  .xl\:mt-97 {
+    margin-top: 6.0625rem;
+  }
+
+  .xl\:mb-0 {
+    margin-bottom: 0rem;
+  }
+
+  .xl\:block {
+    display: block;
+  }
+
+  .xl\:flex {
+    display: flex;
+  }
+
+  .xl\:grid {
+    display: grid;
+  }
+
+  .xl\:h-15 {
+    height: 0.9375rem;
+  }
+
+  .xl\:h-274 {
+    height: 17.125rem;
+  }
+
+  .xl\:h-527 {
+    height: 32.9375rem;
+  }
+
+  .xl\:h-80 {
+    height: 5rem;
+  }
+
+  .xl\:h-auto {
+    height: auto;
+  }
+
+  .xl\:max-h-none {
+    max-height: none;
+  }
+
+  .xl\:min-h-530 {
+    min-height: 33.125rem;
+  }
+
+  .xl\:w-15 {
+    width: 0.9375rem;
+  }
+
+  .xl\:w-274 {
+    width: 17.125rem;
+  }
+
+  .xl\:w-515 {
+    width: 32.1875rem;
+  }
+
+  .xl\:w-80 {
+    width: 5rem;
+  }
+
+  .xl\:w-auto {
+    width: auto;
+  }
+
+  .xl\:w-full {
+    width: 100%;
+  }
+
+  .xl\:max-w-444 {
+    max-width: 27.75rem;
+  }
+
+  .xl\:max-w-445 {
+    max-width: 27.8125rem;
+  }
+
+  .xl\:max-w-none {
+    max-width: none;
+  }
+
+  .xl\:flex-grow {
+    flex-grow: 1;
+  }
+
+  .xl\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .xl\:grid-cols-\[repeat\(2\2c minmax\(0\2c auto\)\)\] {
+    grid-template-columns: repeat(2,minmax(0,auto));
+  }
+
+  .xl\:flex-col {
+    flex-direction: column;
+  }
+
+  .xl\:items-center {
+    align-items: center;
+  }
+
+  .xl\:items-baseline {
+    align-items: baseline;
+  }
+
+  .xl\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .xl\:gap-x-23 {
+    -moz-column-gap: 1.4375rem;
+         column-gap: 1.4375rem;
+  }
+
+  .xl\:gap-x-24 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
+  .xl\:gap-x-52 {
+    -moz-column-gap: 3.25rem;
+         column-gap: 3.25rem;
+  }
+
+  .xl\:gap-x-60 {
+    -moz-column-gap: 3.75rem;
+         column-gap: 3.75rem;
+  }
+
+  .xl\:gap-x-8 {
+    -moz-column-gap: 0.5rem;
+         column-gap: 0.5rem;
+  }
+
+  .xl\:gap-x-80 {
+    -moz-column-gap: 5rem;
+         column-gap: 5rem;
+  }
+
+  .xl\:gap-y-32 {
+    row-gap: 2rem;
+  }
+
+  .xl\:self-start {
+    align-self: flex-start;
+  }
+
+  .xl\:self-end {
+    align-self: flex-end;
+  }
+
+  .xl\:bg-\[image\:var\(--portrait-img\)\] {
+    background-image: var(--portrait-img);
+  }
+
+  .xl\:bg-desktop-crew-pattern {
+    background-image: url('./assets/crew/background-crew-desktop.jpg');
+  }
+
+  .xl\:bg-desktop-destination-pattern {
+    background-image: url('./assets/destination/background-destination-desktop.jpg');
+  }
+
+  .xl\:bg-desktop-home-pattern {
+    background-image: url('./assets/home/background-home-desktop.jpg');
+  }
+
+  .xl\:bg-desktop-technology-pattern {
+    background-image: url('./assets/technology/background-technology-desktop.jpg');
+  }
+
+  .xl\:pb-0 {
+    padding-bottom: 0rem;
+  }
+
+  .xl\:pb-31 {
+    padding-bottom: 1.9375rem;
+  }
+
+  .xl\:pl-125 {
+    padding-left: 7.8125rem;
+  }
+
+  .xl\:pt-37 {
+    padding-top: 2.3125rem;
+  }
+
+  .xl\:text-left {
+    text-align: left;
+  }
+
+  .xl\:text-100 {
+    font-size: 6.25rem;
+  }
+
+  .xl\:text-16 {
+    font-size: 1rem;
+  }
+
+  .xl\:text-18 {
+    font-size: 1.125rem;
+  }
+
+  .xl\:text-28 {
+    font-size: 1.75rem;
+  }
+
+  .xl\:text-32 {
+    font-size: 2rem;
+  }
+
+  .xl\:text-56 {
+    font-size: 3.5rem;
+  }
+
+  .xl\:leading-32 {
+    line-height: 2rem;
+  }
+
+  .xl\:leading-60 {
+    line-height: 3.75rem;
+  }
+
+  .xl\:tracking-\[2\.7px\] {
+    letter-spacing: 2.7px;
+  }
+
+  .xl\:tracking-\[4\.7px\] {
+    letter-spacing: 4.7px;
+  }
+
+  .xl\:content-\[\'\'\] {
+    --tw-content: '';
+    content: var(--tw-content);
+  }
+
+  .xl\:before\:absolute::before {
+    content: var(--tw-content);
+    position: absolute;
+  }
+
+  .xl\:before\:-left-\[27\.5rem\]::before {
+    content: var(--tw-content);
+    left: -27.5rem;
+  }
+
+  .xl\:before\:top-1\/2::before {
+    content: var(--tw-content);
+    top: 50%;
+  }
+
+  .xl\:before\:z-10::before {
+    content: var(--tw-content);
+    z-index: 10;
+  }
+
+  .xl\:before\:h-1::before {
+    content: var(--tw-content);
+    height: 0.0625rem;
+  }
+
+  .xl\:before\:w-470::before {
+    content: var(--tw-content);
+    width: 29.375rem;
+  }
+
+  .xl\:before\:bg-white::before {
+    content: var(--tw-content);
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .xl\:before\:bg-opacity-25::before {
+    content: var(--tw-content);
+    --tw-bg-opacity: 0.25;
+  }
+
+  .xl\:hover\:border-white:hover {
+    --tw-border-opacity: 1;
+    border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  }
+
+  .xl\:hover\:border-opacity-50:hover {
+    --tw-border-opacity: 0.5;
+  }
+
+  .xl\:hover\:shadow-\[0px_0px_0px_88px_rgba\(255\2c 255\2c 255\2c 0\.1\)\]:hover {
+    --tw-shadow: 0px 0px 0px 88px rgba(255,255,255,0.1);
+    --tw-shadow-colored: 0px 0px 0px 88px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:-ml-125 {
+    margin-left: -7.8125rem;
+  }
+
+  .\32xl\:mr-auto {
+    margin-right: auto;
+  }
+
+  .\32xl\:justify-center {
+    justify-content: center;
+  }
+}
+
+@media (min-width: 1920px) {
+  .\33xl\:left-\[calc\(\(100\%-1920px\)\/2\)\] {
+    left: calc((100% - 1920px) / 2);
+  }
+
+  .\33xl\:ml-0 {
+    margin-left: 0rem;
+  }
+
+  .\33xl\:ml-168 {
+    margin-left: 10.5rem;
+  }
+
+  .\33xl\:ml-auto {
+    margin-left: auto;
+  }
+
+  .\33xl\:mr-auto {
+    margin-right: auto;
+  }
+
+  .\33xl\:w-full {
+    width: 100%;
   }
 }
